--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "airtable-node": "^0.1.20",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "netlify-cli": "^10.6.2"
   }
 }
