--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "airtable-node": "^0.1.20",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
-    "netlify-cli": "^10.6.2"
+    "netlify-cli": "^10.6.2",
+    "nodemailer": "^6.7.5",
+    "stripe": "^9.10.0"
   }
 }
